# PyLCM_edu

./: .gitignore  ASSESSMENT_REPORT.md  COLLISION_COMPARISON.md  LEM_IMPLEMENTATION_NOTES.md  LICENSE  OPTIMIZATIONS.md  PyLCM_Part1_Foundations.ipynb  PyLCM_Part2_Experiments.ipynb  PyLCM_edu.ipynb  README.md  README_STREAMLIT.md  SENSITIVITY_TEST_HANDOFF.md  Untitled.ipynb  aero_init.py  analysis.py  animation.py  app_streamlit.py  benchmark_arrays_vs_original.py  benchmark_collision_convergence.py  benchmark_convergence.py  benchmark_optimizations.py  chem.py  collision.py  condensation.py  ensemble.py  ensemble_comparison.py  environment.yml  handoff.md  input.yaml  micro.py  overnight_sensitivity_test.sh  parcel.py  plot_comparison.py  print_plot.py  profile_model.py  pylcm_run.py  pyproject.toml  requirements.txt  run.py  test_arrays.py  (+6 more)
.ipynb_checkpoints/: PyLCM_edu 2-checkpoint.ipynb  PyLCM_edu-checkpoint.ipynb  README-checkpoint.md  Untitled-checkpoint.ipynb  aero_init-checkpoint.py  analysis-checkpoint.py  animation-checkpoint.py  collision-checkpoint.py  condensation-checkpoint.py  micro-checkpoint.py  parameters-checkpoint.py  parcel-checkpoint.py  print_plot-checkpoint.py  timestep_routine-checkpoint.py  widget-checkpoint.py
Output/: TEST_dsd_array_output.csv  TEST_testoutput_model.csv  testoutput_model_230809.csv
Post_process/: analysis.py  print_plot.py
PyLCM/: __init__.py  aero_init.py  aero_init_arrays.py  animation.py  collision.py  collision_arrays.py  collision_optimized.py  collision_soa.py  condensation.py  condensation_arrays.py  ensemble.py  (+18 more)
(+68 files in other folders)
