[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "pylcm"
version = "1.0.0"
description = "Educational Lagrangian Cloud Model parcel simulator"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "J. Lim" }]
dependencies = [
  "numpy>=1.24", "scipy>=1.10", "pandas>=2.0", "matplotlib>=3.7",
  "plotly>=5.0", "numba>=0.58", "ipywidgets>=8.0", "tqdm>=4.65", "joblib>=1.3",
]

[tool.setuptools]
packages = ["PyLCM", "Post_process"]
